test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/POST_api_atlas_v2_groups_111111111111111111111111_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 23 Feb 2026 03:20:47 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="+j4rTI3fFFF/2LoBvs2p0i3g8yPOsXHm", algorithm=MD5, qop="auth", stale=false

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}